[tool.poetry]
name = "cte"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/cte"
homepage = "https://github.com/tomerten/cte"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
black = "^21.7b0"
isort = "^5.9.3"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
